# index

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.gpu.txt  requirements.txt
src/: config.rs  db.rs  main.rs  utils.rs
src/cmd/: mod.rs  showfeature.rs
src/features/: anms.rs  extractor.rs  mod.rs
src/indekkusu/: __main__.py  anms.py  database.py  feature.py  indekkusu.py  utils.py
src/indekkusu/cli/: utils.py
src/indekkusu/cli/commands/: __init__.py  add.py  base.py  build_index.py  detect.py  index.py  match.py  search.py  train_index.py
src/indekkusu/commands/: __init__.py  index.py  match.py  search.py  server.py
src/indekkusu/database/: __init__.py
src/indekkusu/database/crud/: image.py  vector.py
src/indekkusu/database/metadata/: __init__.py  base.py  models.py
src/indekkusu/database/vector/: __init__.py  models.py
src/indekkusu/index/: __init__.py  base.py  index.py  train.py
src/index/: __main__.py  feature.py  utils.py
src/index/commands/: __init__.py  add.py  base.py  detect.py  index.py  match.py  old_search.py  search.py  server.py
src/index/database/: __init__.py
src/index/database/crud/: __init__.py
src/index/database/metadata/: __init__.py
src/index/database/vector/: models.py
src/index/index/: __init__.py  index.py
tests/: gen_report.py  gen_test_dataset.py  gen_test_dataset.sh  gen_testset.py  gen_testset.sh
