[package]
name = "indekkusu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
vectordb = "0.4.10"

[dependencies.opencv]
version = "0.92.0"
default-features = false
features = ["imgcodecs", "features2d", "highgui"]
