[project]
name = "index"
version = "0.1.0"
description = "index and search doujinshi"
authors = [{ name = "Aloxaf", email = "aloxafx@gmail.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
dependencies = [
    "blake3>=1.0.4",
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "opencv-python>=4.11.0.86",
    "peewee>=3.17.9",
    "python-orb-slam3>=0.1.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cpu = [
    "faiss-cpu>=1.10.0",
]
